# pbr-studio

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci-release.yml
ci/fixtures/: create-fixtures.sh
docs/: BUILD-APPIMAGE.md  BUILD-MACOS.md  BUILD-TESTING.md  BUILD-WINDOWS.md  CI-RELEASE.md  CLI-QUICKSTART.md  CLI-USAGE.md  FEATURES.md  PRODUCTION-CHECKLIST.md  PRODUCTION-READINESS-REPORT.md  RELEASE-CHECKLIST.md  RELEASE-NOTES-v1.0.0.md  UI-GUIDE.md  ai-module.md
docs/examples/: README.md  sample-report.html  sample-report.json
docs/plugins/: README.md
docs/plugins/example-studio/: plugin.json
docs/plugins/script-example/: plugin.toml
pbr-cli/: Cargo.toml
pbr-cli/src/: main.rs
pbr-core/: Cargo.toml  README.md
pbr-core/assets/fonts/: README.md
pbr-core/src/: ai.rs  analysis.rs  audit_log.rs  estimation.rs  image_loading.rs  json_report.rs  lib.rs  material.rs  optimization.rs  plugin.rs  report.rs  report_export.rs  undo_stack.rs  validation.rs  version_tracker.rs
pbr-studio-ui/: README.md  index.html  package-lock.json  package.json
pbr-studio-ui/src/: App.css  App.tsx  index.css
pbr-studio-ui/src-tauri/: Cargo.toml  tauri.conf.json
pbr-studio-ui/src-tauri/icons/: icon.icns
pbr-studio-ui/src-tauri/src/: lib.rs  main.rs
pbr-studio-ui/src/components/: AdvancedAnalysisPanel.tsx  AuditLogPanel.tsx  ConsolePanel.tsx  MaterialList.tsx  SettingsPanel.tsx  TexturePanel.tsx  ValidationPanel.tsx  Viewport3D.tsx
pbr-studio-ui/src/context/: PreferencesContext.tsx
scripts/: build-appimage.sh  pre-commit-pbr
(+1 files in other folders)
