[package]
name = "pbr-cli"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
pbr-core = { path = "../pbr-core", features = ["pdf"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

[dev-dependencies]
image = "0.25"
tempfile = "3"