[package]
name = "pbr-core"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
genpdf = { version = "0.2", optional = true }
tract-onnx = { version = "0.22", optional = true }

[features]
default = []
pdf = ["genpdf"]
ai = ["tract-onnx"]  # ONNX inference for material classification