[package]
name = "pbr-core"
version = "1.0.0"
edition = "2021"

[dependencies]
image = { version = "0.25", features = ["exr"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
genpdf = { version = "0.2", optional = true }
tract-onnx = { version = "0.22", optional = true }

[dev-dependencies]
exr = "1.74"

[features]
default = []
pdf = ["genpdf"]
ai = ["tract-onnx"]  # ONNX inference for material classification